[gd_scene load_steps=15 format=3 uid="uid://brcxkglrx63e5"]

[ext_resource type="Script" path="res://scenes/scripts/entity_4_blue_key_machine.tres.gd" id="1_5fovv"]
[ext_resource type="Material" uid="uid://dyfi4fjrc5mys" path="res://textures/pixel-0089-1909946164.tres" id="2_76anu"]
[ext_resource type="AudioStream" uid="uid://dm57eovkeyf23" path="res://sounds/misc/access_denied.wav" id="5_37kux"]
[ext_resource type="Material" uid="uid://bbi1bsrafmnu1" path="res://textures/pixel-0028-3836913674.tres" id="5_tlavg"]
[ext_resource type="AudioStream" uid="uid://dr2nkmteamhvo" path="res://sounds/misc/large_door_SFX1.wav" id="6_rojsk"]
[ext_resource type="AudioStream" uid="uid://bb3yjwonxjbjw" path="res://sounds/misc/access_granted.wav" id="6_ucf5k"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mgseq"]
size = Vector3(1.49, 1.415, 0.815)

[sub_resource type="ArrayMesh" id="ArrayMesh_su1qn"]
_surfaces = [{
"aabb": AABB(-0.535088, -0.895905, -0.279629, 1.52632, 1.43859, 0.526898),
"attribute_data": PackedByteArray(0, 128, 214, 193, 66, 0, 100, 191, 0, 128, 214, 193, 18, 2, 224, 189, 0, 192, 219, 193, 30, 2, 224, 189, 0, 192, 219, 193, 68, 0, 100, 191, 0, 192, 19, 65, 232, 255, 99, 191, 0, 128, 23, 65, 231, 255, 99, 191, 0, 128, 23, 65, 60, 255, 223, 189, 0, 192, 19, 65, 64, 255, 223, 189, 253, 191, 29, 193, 1, 152, 7, 194, 253, 191, 29, 193, 1, 80, 4, 194, 253, 127, 33, 193, 1, 80, 4, 194, 253, 127, 33, 193, 1, 152, 7, 194, 3, 192, 19, 65, 255, 151, 7, 194, 3, 128, 23, 65, 255, 151, 7, 194, 3, 128, 23, 65, 255, 79, 4, 194, 3, 192, 19, 65, 255, 79, 4, 194, 0, 192, 29, 193, 24, 0, 100, 191, 0, 192, 29, 193, 190, 0, 224, 189, 0, 128, 33, 193, 196, 0, 224, 189, 0, 128, 33, 193, 25, 0, 100, 191, 0, 128, 209, 65, 190, 255, 99, 191, 0, 192, 214, 65, 188, 255, 99, 191, 0, 192, 214, 65, 226, 253, 223, 189, 0, 128, 209, 65, 238, 253, 223, 189, 0, 80, 217, 193, 0, 0, 244, 189, 0, 80, 217, 193, 0, 0, 100, 191, 0, 32, 217, 193, 0, 0, 100, 191, 0, 32, 217, 193, 0, 0, 244, 189, 6, 54, 35, 193, 0, 80, 4, 194, 6, 54, 35, 193, 0, 50, 4, 194, 147, 214, 38, 193, 0, 50, 4, 194, 147, 214, 38, 193, 0, 80, 4, 194, 0, 32, 14, 65, 0, 0, 100, 191, 0, 224, 17, 65, 0, 0, 100, 191, 0, 224, 17, 65, 0, 0, 224, 189, 0, 192, 17, 65, 0, 0, 224, 189, 0, 32, 14, 65, 0, 0, 244, 189, 0, 0, 39, 193, 0, 80, 4, 194, 0, 0, 39, 193, 0, 50, 4, 194, 0, 32, 39, 193, 0, 50, 4, 194, 0, 32, 39, 193, 0, 80, 4, 194, 0, 32, 14, 65, 0, 80, 4, 194, 0, 224, 17, 65, 0, 80, 4, 194, 0, 224, 17, 65, 0, 50, 4, 194, 0, 32, 14, 65, 0, 50, 4, 194, 0, 96, 35, 193, 0, 0, 100, 191, 0, 96, 35, 193, 0, 0, 244, 189, 0, 0, 39, 193, 0, 0, 224, 189, 0, 32, 39, 193, 0, 0, 224, 189, 0, 32, 39, 193, 0, 0, 100, 191, 0, 128, 206, 65, 0, 0, 100, 191, 0, 176, 206, 65, 0, 0, 100, 191, 0, 176, 206, 65, 0, 0, 224, 189, 0, 128, 206, 65, 0, 0, 224, 189, 132, 211, 14, 192, 0, 200, 91, 66, 96, 138, 15, 192, 0, 200, 91, 66, 96, 138, 15, 192, 0, 136, 86, 66, 132, 211, 14, 192, 0, 136, 86, 66, 183, 245, 29, 194, 227, 82, 157, 65, 183, 53, 26, 194, 227, 82, 157, 65, 183, 53, 26, 194, 107, 19, 161, 65, 183, 245, 29, 194, 107, 19, 161, 65, 210, 255, 228, 191, 17, 177, 147, 193, 27, 146, 227, 191, 16, 113, 151, 193, 153, 36, 226, 191, 255, 111, 151, 193, 80, 146, 227, 191, 0, 176, 147, 193, 200, 255, 228, 191, 17, 209, 157, 65, 70, 146, 227, 191, 0, 208, 157, 65, 143, 36, 226, 191, 255, 143, 161, 65, 17, 146, 227, 191, 16, 145, 161, 65, 183, 245, 29, 194, 225, 50, 147, 193, 183, 245, 29, 194, 105, 243, 150, 193, 183, 53, 26, 194, 105, 243, 150, 193, 183, 53, 26, 194, 225, 50, 147, 193, 147, 211, 14, 192, 0, 184, 86, 194, 147, 211, 14, 192, 0, 120, 81, 194, 110, 138, 15, 192, 0, 120, 81, 194, 110, 138, 15, 192, 0, 184, 86, 194),
"format": 34359742487,
"index_count": 120,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 24, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 28, 0, 30, 0, 31, 0, 32, 0, 33, 0, 34, 0, 32, 0, 34, 0, 35, 0, 32, 0, 35, 0, 36, 0, 37, 0, 38, 0, 39, 0, 37, 0, 39, 0, 40, 0, 41, 0, 42, 0, 43, 0, 41, 0, 43, 0, 44, 0, 45, 0, 46, 0, 47, 0, 45, 0, 47, 0, 48, 0, 45, 0, 48, 0, 49, 0, 50, 0, 51, 0, 52, 0, 50, 0, 52, 0, 53, 0, 54, 0, 55, 0, 56, 0, 54, 0, 56, 0, 57, 0, 58, 0, 59, 0, 60, 0, 58, 0, 60, 0, 61, 0, 62, 0, 63, 0, 64, 0, 62, 0, 64, 0, 65, 0, 66, 0, 67, 0, 68, 0, 66, 0, 68, 0, 69, 0, 70, 0, 71, 0, 72, 0, 70, 0, 72, 0, 73, 0, 74, 0, 75, 0, 76, 0, 74, 0, 76, 0, 77, 0),
"material": ExtResource("2_76anu"),
"name": "pixel-0089-1909946164",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 78,
"vertex_data": PackedByteArray(126, 4, 247, 190, 83, 242, 1, 63, 130, 43, 143, 190, 126, 4, 247, 190, 7, 90, 101, 191, 130, 43, 143, 190, 31, 193, 125, 63, 7, 90, 101, 191, 130, 43, 143, 190, 31, 193, 125, 63, 83, 242, 1, 63, 130, 43, 143, 190, 126, 4, 247, 190, 83, 242, 1, 63, 130, 43, 143, 190, 126, 4, 247, 190, 83, 242, 1, 63, 130, 155, 124, 62, 126, 4, 247, 190, 7, 90, 101, 191, 130, 155, 124, 62, 126, 4, 247, 190, 7, 90, 101, 191, 130, 43, 143, 190, 31, 193, 125, 63, 7, 90, 101, 191, 130, 43, 143, 190, 126, 4, 247, 190, 7, 90, 101, 191, 130, 43, 143, 190, 126, 4, 247, 190, 7, 90, 101, 191, 130, 155, 124, 62, 31, 193, 125, 63, 7, 90, 101, 191, 130, 155, 124, 62, 31, 193, 125, 63, 83, 242, 1, 63, 130, 43, 143, 190, 31, 193, 125, 63, 83, 242, 1, 63, 130, 155, 124, 62, 126, 4, 247, 190, 83, 242, 1, 63, 130, 155, 124, 62, 126, 4, 247, 190, 83, 242, 1, 63, 130, 43, 143, 190, 31, 193, 125, 63, 83, 242, 1, 63, 130, 43, 143, 190, 31, 193, 125, 63, 7, 90, 101, 191, 130, 43, 143, 190, 31, 193, 125, 63, 7, 90, 101, 191, 130, 155, 124, 62, 31, 193, 125, 63, 83, 242, 1, 63, 130, 155, 124, 62, 126, 4, 247, 190, 83, 242, 1, 63, 130, 155, 124, 62, 31, 193, 125, 63, 83, 242, 1, 63, 130, 155, 124, 62, 31, 193, 125, 63, 7, 90, 101, 191, 130, 155, 124, 62, 126, 4, 247, 190, 7, 90, 101, 191, 130, 155, 124, 62, 126, 4, 247, 190, 70, 220, 96, 191, 130, 43, 143, 190, 126, 4, 247, 190, 83, 242, 1, 63, 130, 43, 143, 190, 130, 251, 8, 191, 83, 242, 1, 63, 130, 43, 143, 190, 130, 251, 8, 191, 70, 220, 96, 191, 130, 43, 143, 190, 126, 4, 247, 190, 70, 220, 96, 191, 130, 43, 143, 190, 130, 251, 8, 191, 70, 220, 96, 191, 130, 43, 143, 190, 130, 251, 8, 191, 7, 90, 101, 191, 126, 164, 106, 62, 126, 4, 247, 190, 7, 90, 101, 191, 126, 164, 106, 62, 130, 251, 8, 191, 83, 242, 1, 63, 130, 43, 143, 190, 130, 251, 8, 191, 83, 242, 1, 63, 130, 155, 124, 62, 130, 251, 8, 191, 7, 90, 101, 191, 130, 155, 124, 62, 130, 251, 8, 191, 7, 90, 101, 191, 126, 164, 106, 62, 130, 251, 8, 191, 70, 220, 96, 191, 130, 43, 143, 190, 126, 4, 247, 190, 7, 90, 101, 191, 126, 164, 106, 62, 130, 251, 8, 191, 7, 90, 101, 191, 126, 164, 106, 62, 130, 251, 8, 191, 7, 90, 101, 191, 130, 155, 124, 62, 126, 4, 247, 190, 7, 90, 101, 191, 130, 155, 124, 62, 126, 4, 247, 190, 83, 242, 1, 63, 130, 43, 143, 190, 126, 4, 247, 190, 83, 242, 1, 63, 130, 155, 124, 62, 130, 251, 8, 191, 83, 242, 1, 63, 130, 155, 124, 62, 130, 251, 8, 191, 83, 242, 1, 63, 130, 43, 143, 190, 126, 4, 247, 190, 83, 242, 1, 63, 130, 43, 143, 190, 126, 4, 247, 190, 70, 220, 96, 191, 130, 43, 143, 190, 126, 4, 247, 190, 7, 90, 101, 191, 126, 164, 106, 62, 126, 4, 247, 190, 7, 90, 101, 191, 130, 155, 124, 62, 126, 4, 247, 190, 83, 242, 1, 63, 130, 155, 124, 62, 130, 251, 8, 191, 83, 242, 1, 63, 130, 155, 124, 62, 126, 4, 247, 190, 83, 242, 1, 63, 130, 155, 124, 62, 126, 4, 247, 190, 7, 90, 101, 191, 130, 155, 124, 62, 130, 251, 8, 191, 7, 90, 101, 191, 130, 155, 124, 62, 31, 193, 125, 63, 25, 112, 6, 63, 130, 43, 143, 190, 31, 193, 125, 63, 52, 237, 10, 63, 225, 222, 142, 190, 126, 4, 247, 190, 52, 237, 10, 63, 225, 222, 142, 190, 126, 4, 247, 190, 25, 112, 6, 63, 130, 43, 143, 190, 31, 193, 125, 63, 25, 112, 6, 63, 130, 43, 143, 190, 126, 4, 247, 190, 25, 112, 6, 63, 130, 43, 143, 190, 126, 4, 247, 190, 88, 242, 1, 63, 243, 154, 124, 62, 31, 193, 125, 63, 88, 242, 1, 63, 243, 154, 124, 62, 126, 4, 247, 190, 52, 237, 10, 63, 225, 222, 142, 190, 126, 4, 247, 190, 115, 111, 6, 63, 54, 52, 125, 62, 126, 4, 247, 190, 88, 242, 1, 63, 243, 154, 124, 62, 126, 4, 247, 190, 25, 112, 6, 63, 130, 43, 143, 190, 31, 193, 125, 63, 52, 237, 10, 63, 225, 222, 142, 190, 31, 193, 125, 63, 25, 112, 6, 63, 130, 43, 143, 190, 31, 193, 125, 63, 88, 242, 1, 63, 243, 154, 124, 62, 31, 193, 125, 63, 115, 111, 6, 63, 54, 52, 125, 62, 31, 193, 125, 63, 52, 237, 10, 63, 225, 222, 142, 190, 31, 193, 125, 63, 115, 111, 6, 63, 54, 52, 125, 62, 126, 4, 247, 190, 115, 111, 6, 63, 54, 52, 125, 62, 126, 4, 247, 190, 52, 237, 10, 63, 225, 222, 142, 190, 31, 193, 125, 63, 88, 242, 1, 63, 243, 154, 124, 62, 126, 4, 247, 190, 88, 242, 1, 63, 243, 154, 124, 62, 126, 4, 247, 190, 115, 111, 6, 63, 54, 52, 125, 62, 31, 193, 125, 63, 115, 111, 6, 63, 54, 52, 125, 62, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 255, 255, 127, 254, 255, 255, 255, 255, 255, 255, 127, 254, 255, 255, 255, 255, 255, 255, 127, 254, 255, 255, 255, 255, 255, 255, 127, 254, 255, 255, 255, 255, 127, 255, 127, 254, 255, 255, 191, 255, 127, 255, 127, 254, 255, 255, 191, 255, 127, 255, 127, 254, 255, 255, 191, 255, 127, 255, 127, 254, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 67, 132, 0, 0, 186, 251, 255, 255, 67, 132, 0, 0, 186, 251, 255, 255, 67, 132, 0, 0, 186, 251, 255, 255, 67, 132, 0, 0, 186, 251, 255, 255, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 221, 251, 255, 255, 32, 132, 0, 128, 221, 251, 255, 255, 32, 132, 0, 128, 221, 251, 255, 255, 32, 132, 0, 128, 221, 251, 255, 255, 32, 132, 0, 128, 32, 132, 0, 0, 0, 0, 255, 191, 32, 132, 0, 0, 0, 0, 255, 191, 32, 132, 0, 0, 0, 0, 255, 191, 32, 132, 0, 0, 0, 0, 255, 191, 0, 0, 255, 127, 255, 127, 0, 128, 0, 0, 255, 127, 255, 127, 0, 128, 0, 0, 255, 127, 255, 127, 0, 128, 0, 0, 255, 127, 255, 127, 0, 128, 255, 255, 255, 127, 255, 127, 0, 128, 255, 255, 255, 127, 255, 127, 0, 128, 255, 255, 255, 127, 255, 127, 0, 128, 255, 255, 255, 127, 255, 127, 0, 128, 255, 127, 221, 251, 0, 0, 255, 191, 255, 127, 221, 251, 0, 0, 255, 191, 255, 127, 221, 251, 0, 0, 255, 191, 255, 127, 221, 251, 0, 0, 255, 191, 255, 127, 222, 123, 222, 123, 0, 128, 255, 127, 222, 123, 222, 123, 0, 128, 255, 127, 222, 123, 222, 123, 0, 128, 255, 127, 222, 123, 222, 123, 0, 128)
}]

[sub_resource type="ArrayMesh" id="ArrayMesh_pqato"]
_surfaces = [{
"aabb": AABB(-4.42105, -1.68421, -0.263158, 8.8421, 3.36843, 0.526316),
"attribute_data": PackedByteArray(142, 195, 244, 65, 0, 0, 124, 191, 142, 195, 244, 65, 0, 0, 64, 189, 199, 225, 11, 66, 0, 0, 64, 189, 199, 225, 11, 66, 0, 0, 124, 191, 57, 78, 39, 65, 0, 0, 124, 191, 228, 120, 43, 65, 0, 0, 124, 191, 228, 120, 43, 65, 0, 0, 64, 189, 57, 78, 39, 65, 0, 0, 64, 189, 57, 78, 39, 65, 0, 160, 156, 193, 57, 78, 39, 65, 0, 240, 136, 193, 228, 120, 43, 65, 0, 240, 136, 193, 228, 120, 43, 65, 0, 160, 156, 193, 57, 78, 39, 65, 0, 160, 156, 193, 228, 120, 43, 65, 0, 160, 156, 193, 228, 120, 43, 65, 0, 240, 136, 193, 57, 78, 39, 65, 0, 240, 136, 193, 57, 78, 39, 65, 0, 0, 124, 191, 57, 78, 39, 65, 0, 0, 64, 189, 228, 120, 43, 65, 0, 0, 64, 189, 228, 120, 43, 65, 0, 0, 124, 191, 142, 195, 244, 65, 0, 0, 124, 191, 199, 225, 11, 66, 0, 0, 124, 191, 199, 225, 11, 66, 0, 0, 64, 189, 142, 195, 244, 65, 0, 0, 64, 189),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0),
"material": ExtResource("5_tlavg"),
"name": "pixel-0028-3836913674",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray(67, 121, 141, 192, 54, 148, 215, 63, 162, 188, 134, 190, 67, 121, 141, 192, 54, 148, 215, 191, 162, 188, 134, 190, 67, 121, 141, 64, 54, 148, 215, 191, 162, 188, 134, 190, 67, 121, 141, 64, 54, 148, 215, 63, 162, 188, 134, 190, 67, 121, 141, 192, 54, 148, 215, 63, 162, 188, 134, 190, 67, 121, 141, 192, 54, 148, 215, 63, 162, 188, 134, 62, 67, 121, 141, 192, 54, 148, 215, 191, 162, 188, 134, 62, 67, 121, 141, 192, 54, 148, 215, 191, 162, 188, 134, 190, 67, 121, 141, 64, 54, 148, 215, 191, 162, 188, 134, 190, 67, 121, 141, 192, 54, 148, 215, 191, 162, 188, 134, 190, 67, 121, 141, 192, 54, 148, 215, 191, 162, 188, 134, 62, 67, 121, 141, 64, 54, 148, 215, 191, 162, 188, 134, 62, 67, 121, 141, 64, 54, 148, 215, 63, 162, 188, 134, 190, 67, 121, 141, 64, 54, 148, 215, 63, 162, 188, 134, 62, 67, 121, 141, 192, 54, 148, 215, 63, 162, 188, 134, 62, 67, 121, 141, 192, 54, 148, 215, 63, 162, 188, 134, 190, 67, 121, 141, 64, 54, 148, 215, 63, 162, 188, 134, 190, 67, 121, 141, 64, 54, 148, 215, 191, 162, 188, 134, 190, 67, 121, 141, 64, 54, 148, 215, 191, 162, 188, 134, 62, 67, 121, 141, 64, 54, 148, 215, 63, 162, 188, 134, 62, 67, 121, 141, 192, 54, 148, 215, 63, 162, 188, 134, 62, 67, 121, 141, 64, 54, 148, 215, 63, 162, 188, 134, 62, 67, 121, 141, 64, 54, 148, 215, 191, 162, 188, 134, 62, 67, 121, 141, 192, 54, 148, 215, 191, 162, 188, 134, 62, 255, 255, 255, 255, 255, 255, 255, 63, 255, 255, 255, 255, 255, 255, 255, 63, 255, 255, 255, 255, 255, 255, 255, 63, 255, 255, 255, 255, 255, 255, 255, 63, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 255, 127, 0, 0, 255, 127, 255, 63, 255, 127, 0, 0, 255, 127, 255, 63, 255, 127, 0, 0, 255, 127, 255, 63, 255, 127, 0, 0, 255, 127, 255, 63, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 255, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 127, 255, 63, 255, 255, 255, 127, 255, 127, 255, 63, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191)
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_xwxou"]
size = Vector3(8.915, 3.37, 1)

[sub_resource type="Animation" id="Animation_7h82a"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 6.0439, 0.849707, -0.542804)

[sub_resource type="Animation" id="Animation_2fnn8"]
resource_name = "closed"
length = 0.3
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 6.0439, 0.849707, -0.542804)

[sub_resource type="Animation" id="Animation_y0cl6"]
resource_name = "opened"
length = 3.0
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 6.0439, 0.849707, -0.542804, 3, 1, 6.044, 4.504, -0.543)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g0jnt"]
_data = {
"RESET": SubResource("Animation_7h82a"),
"closed": SubResource("Animation_2fnn8"),
"opened": SubResource("Animation_y0cl6")
}

[node name="blue_key_machine" type="Node3D" groups=["Interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 59.9912, 1.17661, 21.7182)

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 6
collision_mask = 7
script = ExtResource("1_5fovv")
unlock_type = 1
key_name = "blue_key"

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" groups=["Interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.238373, -0.2038, -0.146667)
shape = SubResource("BoxShape3D_mgseq")

[node name="entity_4_mesh_instance" type="MeshInstance3D" parent="StaticBody3D"]
cast_shadow = 2
gi_mode = 0
mesh = SubResource("ArrayMesh_su1qn")
skeleton = NodePath("../..")

[node name="secret_door" type="Node3D" parent="." groups=["Interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.0439, 0.849707, -0.542804)

[node name="StaticBody3D" type="StaticBody3D" parent="secret_door"]
collision_layer = 6
collision_mask = 7

[node name="entity_1_mesh_instance" type="MeshInstance3D" parent="secret_door/StaticBody3D"]
cast_shadow = 2
gi_mode = 0
mesh = SubResource("ArrayMesh_pqato")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="secret_door/StaticBody3D"]
shape = SubResource("BoxShape3D_xwxou")

[node name="doorsfx" type="AudioStreamPlayer3D" parent="secret_door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.04393, -2.03785, 0.542852)
stream = ExtResource("6_rojsk")
volume_db = -2.254
unit_size = 25.48
max_distance = 115.38
bus = &"SFX_REVERB"
emission_angle_enabled = true

[node name="access_denied" type="AudioStreamPlayer3D" parent="secret_door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.04393, -2.03785, 0.542852)
stream = ExtResource("5_37kux")
volume_db = -2.254
unit_size = 25.48
max_distance = 115.38
bus = &"SFX"
emission_angle_enabled = true

[node name="access_granted" type="AudioStreamPlayer3D" parent="secret_door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.04393, -2.03785, 0.542852)
stream = ExtResource("6_ucf5k")
volume_db = -2.254
unit_size = 25.48
max_distance = 115.38
bus = &"SFX"
emission_angle_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="secret_door"]
libraries = {
"": SubResource("AnimationLibrary_g0jnt")
}
autoplay = "closed"
